--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
   "dependencies": {
     "aws-sdk": "^2.835.0",
     "fp-ts": "^2.9.5",
-    "io-ts": "^2.2.14"
+    "io-ts": "^2.2.14",
+    "lodash.get": "^4.4.2"
+  },
+  "peerDependencies": {
+    "serverless": ">=2"
   }
 }
