--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "target": "es6",
       "sourceMap": true,
       "outDir": "dist",
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "esModuleInterop": true
     },
     "exclude": [
       "node_modules"
